--- a/exercicios/ex022/divscap19.html
+++ b/exercicios/ex022/divscap19.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divs do Guanajhonsons</title>
     <style>
+        body{
+            background-image: url(patterns/wallpaper001.jpg);
+        }
         .quadrado{
             display: inline-block;
             margin: 5px;
@@ -21,7 +24,7 @@
             background-image: linear-gradient(to bottom, yellow, orange) ;
         }
         #q3{
-            background-image: url(patterns/pattern003.png);
+            background-image: url(patterns/pattern001.png);
         }
     </style>
 </head>
