--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urls externas do Guanajhonsons</title>
+    <title>Personalização de Fundo</title>
     <style>
-        body{
+        body {
             background-image: url(https://s2.glbimg.com/ePKGmXEpW4G4iXpZJOl7UaB94ky3x6hg9A6cNSzhyatIoz-HdGixxa_8qOZvMp3w/e.glbimg.com/og/ed/f/original/2014/03/26/donaclotilde.jpg);
             background-size: 100px 100px;
-            background-repeat: repeat-y;
+
         }
-        
     </style>
 </head>
 <body>
-    
 </body>
 </html>
