--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urls externas do Guanajhonsons</title>
+    <title>Posicionamento</title>
     <style>
         body{
+            height: 98vh;
+            border: 1px dashed black;
             background-image: url(https://s2.glbimg.com/ePKGmXEpW4G4iXpZJOl7UaB94ky3x6hg9A6cNSzhyatIoz-HdGixxa_8qOZvMp3w/e.glbimg.com/og/ed/f/original/2014/03/26/donaclotilde.jpg);
-            background-size: 100px 100px;
-            background-repeat: repeat-y;
+            background-size: 100px ;
+            background-repeat: no-repeat;
+            background-position: center center;
         }
-        
     </style>
 </head>
 <body>
