--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(patterns/wallpaper002.jpg);
-            background-repeat: no-repeat;
-            background-position: center center;
+            background: black url(patterns/wallpaper002.jpg) center top no-repeat fixed;
             background-size: cover;
+            /* Shorthand - Background
+                color > image > position > repeat > [size] > attachment
+            */
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -24,12 +24,18 @@
     </style>
 </head>
 <body>
-    
     <main>
         <h1>
             Teste de Imagem de Fundo
         </h1>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam?</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam? 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam? 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam? 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam? 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque esse quo repellendus officia, sit possimus at ducimus. Velit, dignissimos voluptate consectetur pariatur nesciunt odit! Sed cum alias fugiat quidem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit nam at dolor assumenda obcaecati ratione quia similique, ea repudiandae totam quos perspiciatis, laboriosam neque delectus quaerat, hic accusamus debitis corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates accusantium itaque ut illum libero deserunt recusandae, illo, sapiente nemo alias minima perferendis? Laborum maiores nulla temporibus, perferendis ex quisquam aperiam?
+        </p>
     </main>
 </body>
 </html>
