--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -7,10 +7,12 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            font-weight: bolder;
         }
 
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse; /*Parâmetro para definir se a borda será separada ou junta*/
         }
 
@@ -33,10 +35,13 @@
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /*Alinhamento Horizontal*/
+            vertical-align: middle; /*Alinhamento Vertical*/
         }
 
         td:hover{
-            background-color: yellow;
+            background-color: rgb(0, 0, 0);
+            color: white;
             cursor: pointer;
         }
     </style>
