--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -243,8 +243,8 @@
             </tr>
         </tbody>
         <tfoot>
-            <th scope="row">Total de Habitantes</th>
-            <td><strong>212 583 720</strong></td>
+            <th colspan="2" scope="row">Total de Habitantes</th>
+            <td class="num" colspan="2"><strong>212 583 720</strong></td>
         </tfoot>
         <!-- Escopo serve para exemplificar para o navegador onde estão descritos os dados referentes ao titulo exibido em TH -->
     </table>
