--- a/exercicios/ex023/tabela.006.html
+++ b/exercicios/ex023/tabela.006.html
@@ -5,31 +5,166 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas Responsivas</title>
     <style>
-        body
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+
+        }
+
+        table{
+            border-collapse: collapse;
+        }
+
+        caption{
+            font-size: 1.2em;
+            font-weight: bolder;
+            padding: 20px;
+        }
+
+        th, td{
+            border: 1px solid black;
+            padding: 10px;
+        }
+
+        tr:nth-child(even){
+            background-color: lightgray;
+        }
+
+        div#container{
+            overflow-x:auto ;
+        }
     </style>
 </head>
 <body>
     <h1>Tabelas em telas pequenas</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi magni totam illum qui aperiam rem obcaecati doloribus aspernatur quisquam tempore molestiae sunt dolor aut asperiores quis minus, nulla veritatis optio?</p>
-    <table>
-        <caption>Tabelas Responsivas</caption>
-        <thead>
-            <tr>
-                <th>Produtos</th>
-                <th>Jan</th>
-                <th>Fev</th>
-                <th>Mar</th>
-                <th>Abr</th>
-                <th>Mai</th>
-                <th>Jun</th>
-                <th>Jul</th>
-                <th>Ago</th>
-                <th>Set</th>
-                <th>Out</th>
-                <th>Nov</th>
-                <th>Dez</th>
-            </tr>
-        </thead>
-    </table>
+    <div id="container">
+        <table>
+            <caption>Tabelas Responsivas</caption>
+            <thead>
+                <tr>
+                    <th>Produtos</th>
+                    <th>Jan</th>
+                    <th>Fev</th>
+                    <th>Mar</th>
+                    <th>Abr</th>
+                    <th>Mai</th>
+                    <th>Jun</th>
+                    <th>Jul</th>
+                    <th>Ago</th>
+                    <th>Set</th>
+                    <th>Out</th>
+                    <th>Nov</th>
+                    <th>Dez</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TV 40"</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>10</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>8</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Home Theater</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>9</td>
+                    <td>6</td>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>7</td>
+                    <td>9</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>Samsung Galaxy S20</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>5</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>6</td>
+                    <td>8</td>
+                    <td>5</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>iPad Mini</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>7</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>5</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>PlayStation 4 </td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>8</td>
+                    <td>8</td>
+                    <td>8</td>
+                    <td>4</td>
+                    <td>4</td>
+                    <td>9</td>
+                    <td>9</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>Lava Louça</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Amazon Echo</td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>9</td>
+                    <td>9</td>
+                    <td>9</td>
+                    <td>9</td>
+                    <td>10</td>
+                    <td>10</td>
+                    <td>2</td>
+                    <td>2</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
