--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -5,20 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe dnv</title>
     <style>
-        iframe{
-            display: block;
-            margin: auto;
-            width: 650px;
-            height: 500px;
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        #tela{
+            width: 90vw;
+            height: 400px;
+            border: 2px solid black;
+
         }
     </style>
 </head>
 <body>
     <h1>Teste com iframe</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim asperiores, fugiat nobis nemo voluptatum id facere qui, voluptate velit molestias obcaecati eum magni rerum! Quae ipsa possimus quas adipisci maxime?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi corrupti natus ipsum perspiciatis est cupiditate nulla odio ab fugiat sint minima quo sapiente iste tempora, cumque accusantium voluptatem harum in.</p>
-    <iframe src="../ex023/tabela004.html" frameborder="0">Isso é um teste</iframe>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim asperiores, fugiat nobis nemo voluptatum id facere qui, voluptate velit molestias obcaecati eum magni rerum! Quae ipsa possimus quas adipisci maxime?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi corrupti natus ipsum perspiciatis est cupiditate nulla odio ab fugiat sint minima quo sapiente iste tempora, cumque accusantium voluptatem harum in.
+    </p>
+    
+    <ul>
+        <li><a href="../ex023/tabela002.html" target="frame">Primeira página</a></li>
+        <li><a href="../ex023/tabela003.html" target="frame">Segundo página</a></li>
+        <li><a href="../ex023/tabela004.html" target="frame">Terceira página</a></li>
+    </ul>
+
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit nesciunt dolore porro, neque iure, repellat deserunt odit ullam, sequi fugit rerum maiores doloribus sunt numquam sed sint tempore ut dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laudantium dolore cupiditate voluptates nulla magni adipisci voluptate delectus ab beatae tenetur, aut quibusdam sint omnis placeat cum, reiciendis eveniet non?
+    </p>
+
+    <iframe id="tela" name="frame" src=""></iframe>
+
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At autem, magni voluptate recusandae, blanditiis atque vitae voluptatibus iusto eos modi culpa possimus in illo rem iste saepe eveniet expedita dolore?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, molestias ea, aspernatur in numquam est quas tempora sapiente voluptates, pariatur aliquid. Hic dolorum vel numquam perspiciatis, ducimus sunt non modi.
     </p>
 </body>
 </html>
