--- a/exercicios/ex025/form.html
+++ b/exercicios/ex025/form.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <h1>Formulário</h1>
-    <form>
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="nome" id="nome"></p>
+    <form action="cadastro.php" method="post" autocomplete="off"><!-- Sugestão de nome-->
+        <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome"></p><!--A tag label é utilizada para vincular o nome ao input, criando assim uma associação da string ao objeto-->
+        <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
